--- a/Angular-app/src/app/app.component.html
+++ b/Angular-app/src/app/app.component.html
@@ -6,9 +6,9 @@
 
 
 <button [routerLink]="['home']"><i class="fa fa-home"></i>Home </button>
-<button [routerLink]="['mine']">Set Alerts</button>
-<button [routerLink]="['buy']">Inquiring Customers</button>
-<button [routerLink]="['sell']">Customer Management</button>
-<button [routerLink]="['browse']">Settings</button>
+<button [routerLink]="['set']">Set Customers</button>
+<button [routerLink]="['inquiring']">Inquiring Customers</button>
+<button [routerLink]="['frequent']">Frequent Visitors</button>
+<button [routerLink]="['settings']">Settings</button>
 
 <router-outlet></router-outlet>
