--- a/Angular-app/src/app/home/home.component.html
+++ b/Angular-app/src/app/home/home.component.html
@@ -9,7 +9,27 @@
 </div>
 <div>
   <h3>Visit Logs</h3>
-  <p *ngFor= "let visit of visits" > User: ' <a [routerLink]="['user-detail', visit._visitor._id]">{{visit._visitor.byte_stream | slice:0:20}} </a>' has entered camera location: <a [routerLink]="['camera-detail', visit._camera._id]"> {{visit._camera.mac_addr}}</a>  on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} </p>
+  <p *ngFor= "let visit of visits" > 
+    User: ' 
+    <a [routerLink]="['user-detail', visit._visitor._id]"> 
+      <span *ngIf= "visit._visitor.first_name; else otherUser"> 
+        {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
+      </span> 
+      <ng-template #otherUser> 
+        {{visit._visitor._id}}  
+      </ng-template> 
+    </a>' 
+    has entered camera location: 
+    <a [routerLink]="['camera-detail', visit._camera._id]"> 
+        <span *ngIf= "visit._camera.location; else otherCam"> 
+            {{visit._camera.location}}
+        </span> 
+        <ng-template #otherCam> 
+          {{visit._camera.mac_addr}}
+        </ng-template> 
+    </a>  
+    on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} 
+  </p>
 </div>
 
 <router-outlet></router-outlet>
