--- a/Angular-app/src/app/app.component.html
+++ b/Angular-app/src/app/app.component.html
@@ -5,10 +5,10 @@
   </h1>
 
 
-<button [routerLink]="['home']"><i class="fa fa-home"></i>Home </button>
-<button [routerLink]="['set']">Set Customers</button>
-<button [routerLink]="['inquiring']">Inquiring Customers</button>
-<button [routerLink]="['frequent']">Frequent Visitors</button>
-<button [routerLink]="['settings']">Settings</button>
+<button class="btn btn-secondary" [routerLink]="['home']"><i class="fa fa-home"></i>Home </button>
+<button class="btn btn-secondary" [routerLink]="['set']">Set Customers</button>
+<button class="btn btn-secondary" [routerLink]="['inquiring']">Inquiring Customers</button>
+<button class="btn btn-secondary" [routerLink]="['frequent']">Frequent Visitors</button>
+<button  class="btn btn-secondary" [routerLink]="['settings']">Settings</button>
 
 <router-outlet></router-outlet>
