--- a/Angular-app/src/app/user-detail/user-detail.component.html
+++ b/Angular-app/src/app/user-detail/user-detail.component.html
@@ -6,6 +6,13 @@
 
 <div class="info">
   <h4>User Details</h4>
+  <h4>Status: 
+    <span *ngIf="user.vip ; else blacklist">VIP</span> 
+    <ng-template #blacklist>
+      <span *ngIf="user.blacklist ; else normal">Blacklisted</span>
+    </ng-template> 
+    <ng-template #normal>Normal</ng-template>
+  </h4>
   <h5>ID: {{user._id}}</h5>
   <h5>first name:  {{user.first_name}} </h5>
   <h5>last name: {{user.last_name}}</h5>
@@ -14,10 +21,15 @@
   <h5>phone: {{user.telephone}}</h5>
   <h5>comment: {{user.comment}}</h5>
   <h5> Number of times entered: {{user._visits.length}} </h5>
-  <div class="buttons">
-    <form (submit)="editShow(user)">
-      <button type="submit" class="btn btn-secondary">Edit</button>
-    </form>
+  <div class="row">
+      <div class="col-sm-12 text-center">
+          <form id="btnEdit" (submit)="editShow(user)">
+              <button type="submit"  class="btn btn-secondary btn-md center-block">Edit User</button>
+          </form>
+          <form id="btnStatus" (submit)="statusShow(user)">
+              <button type="submit" class="btn btn-secondary btn-md center-block">Add Status</button>
+          </form>
+       </div>
   </div>
     <br>
   <div *ngIf="success" class="alert alert-success">
@@ -28,6 +40,7 @@
   </div>
 </div>
 <br>
+<!-- edit form -->
 <div *ngIf="user.showEditForm">
   <form (submit)="edit(user)" id="editForm">
       <label> First Name:
@@ -62,3 +75,29 @@
        </div>
   </div>
 </div>
+<!-- set status form -->
+<div *ngIf="user.showStatusForm">
+  <h5>Set visitor as:</h5>
+    <form (submit)="status(user)" id="statusForm">
+        <label>
+            <input type="radio" name="status" [(ngModel)]="newStatus" [value]="1">
+            VIP
+          </label><br/>
+            <label>
+            <input type="radio" name="status" [(ngModel)]="newStatus" [value]="2">
+            Blacklist
+          </label><br/>
+          <label>
+            <input type="radio" name="status" [(ngModel)]="newStatus" [value]="3">
+            Normal Visitor
+          </label><br/><br/>
+    </form>
+    <div class="row">
+        <div class="col-sm-12 text-center">
+            <button id="btnSave" type="submit" class="btn btn-primary btn-md center-block" form="statusForm">Save</button> 
+            <form id="btnCancel" (submit)="cancelStatus(user)">
+                <button type="submit" class="btn btn-danger btn-md center-block">Cancel</button>
+            </form> 
+         </div>
+    </div>
+  </div>
