--- a/Angular-app/src/app/user-detail/user-detail.component.scss
+++ b/Angular-app/src/app/user-detail/user-detail.component.scss
@@ -1,5 +1,7 @@
 #btnSave,
-#btnCancel{
+#btnCancel,
+#btnEdit,
+#btnStatus{
     display: inline-block;
     vertical-align: top;
     width: 100px;
