starting set cameras

--- a/Angular-app/src/app/app.component.html
+++ b/Angular-app/src/app/app.component.html
@@ -6,8 +6,8 @@
 
 
 <button class="btn btn-secondary" [routerLink]="['home']"><i class="fa fa-home"></i>Home </button>
-<button class="btn btn-secondary" [routerLink]="['set']">Set Customers</button>
-<button class="btn btn-secondary" [routerLink]="['inquiring']">Inquiring Customers</button>
+<button class="btn btn-secondary" [routerLink]="['setCustomer']">Set Customers</button>
+<button class="btn btn-secondary" [routerLink]="['setCamera']">Set Cameras</button>
 <button class="btn btn-secondary" [routerLink]="['frequent']">Frequent Visitors</button>
 <button  class="btn btn-secondary" [routerLink]="['settings']">Settings</button>
 
