--- a/Angular-app/src/app/setCamera/cameras/cameras.component.html
+++ b/Angular-app/src/app/setCamera/cameras/cameras.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <p>Cameras...</p>
+  <div class="row">
+    <h3>Cameras</h3>
     <div class="table vertical-center">
       <table class="table">
         <thead class="thead-dark">
@@ -28,5 +29,6 @@
         </tbody>
       </table>
     </div>
+  </div>
   </div>
   <router-outlet></router-outlet>
