--- a/Angular-app/src/app/home/home.component.html
+++ b/Angular-app/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="jumbotron">
+  <!-- <div class="jumbotron">
     <h2>
       Black Book
     </h2>
     <h4>
       Welcome to Black-Book, a tool by Sense in Silico, which helps you recognize important customers entering your stores.
     </h4>
-  </div>
+  </div> -->
   <div>
     <h3>Visit Logs</h3>
     <div>
