--- a/Angular-app/src/app/set/set.component.html
+++ b/Angular-app/src/app/set/set.component.html
@@ -10,7 +10,7 @@
           <th scope="col">Class</th>
           <th scope="col">Total Entries</th>
           <th scope="col">Recent Entered Time</th>
-          <th scope="col">Edit</th>
+          <th scope="col">Edit/Delete</th>
         </tr>
       </thead>
       <tbody>
