--- a/Angular-app/src/app/app.component.html
+++ b/Angular-app/src/app/app.component.html
@@ -3,12 +3,12 @@
   <h1>
     {{ title }}
   </h1>
-
-
-<button class="btn btn-secondary" [routerLink]="['home']"><i class="fa fa-home"></i>Home </button>
-<button class="btn btn-secondary" [routerLink]="['setCustomer']">Set Customers</button>
-<button class="btn btn-secondary" [routerLink]="['setCamera']">Set Cameras</button>
-<button class="btn btn-secondary" [routerLink]="['frequent']">Frequent Visitors</button>
-<button  class="btn btn-secondary" [routerLink]="['settings']">Settings</button>
+<div class="buttons">
+  <button class="btn btn-secondary" [routerLink]="['home']"><i class="fa fa-home"></i>Home </button>
+  <button class="btn btn-secondary" [routerLink]="['setCustomer']">Set Customers</button>
+  <button class="btn btn-secondary" [routerLink]="['setCamera']">Set Cameras</button>
+  <!-- <button class="btn btn-secondary" [routerLink]="['frequent']">Frequent Visitors</button>
+  <button  class="btn btn-secondary" [routerLink]="['settings']">Settings</button> -->
+</div>
 
 <router-outlet></router-outlet>
