--- a/Angular-app/src/app/set/set.component.scss
+++ b/Angular-app/src/app/set/set.component.scss
@@ -10,3 +10,17 @@
     width: 100px;
     margin: 2px;
 }
+
+#headshot{
+    height: 150px;
+    width: 150px;
+    display: inline-block;
+}
+
+img.hover-shadow {
+    transition: 0.3s
+  }
+  
+  .hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+  }
