--- a/Angular-app/src/app/set/set.component.html
+++ b/Angular-app/src/app/set/set.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h2>Set Visitor Information</h2>
+  <h2>Set Recent Visitor Information</h2>
   <div class="table vertical-center">
     <table class="table">
       <thead class="thead-dark">
